# keyring-node

./: .eslintrc.yml  .gitignore  .taplo.toml  .yarnrc.yml  Cargo.toml  README.md  index.d.ts  index.js  keytar.d.ts  keytar.js  package.json  test.js  tsconfig.json
.github/workflows/: CI.yml  lint.yml
__test__/: index.spec.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: async_entry.rs  entry.rs  lib.rs  linux_credential_builder.rs
