[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-keyring"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
napi = { version = "2", default-features = false, features = [
  "napi3",
  "error_anyhow",
] }
napi-derive = "2"

[target.'cfg(target_os = "windows")'.dependencies]
byteorder = "1"
windows = { version = "0.58", features = [
  "Win32",
  "Win32_Security_Credentials",
  "Win32_Foundation",
] }
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation        = "0.9"
security-framework     = "2.9"
security-framework-sys = "2.9"
keyring = { version = "3", features = ["apple-native"]}

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
secret-service = { version = "4", features = ["rt-async-io-crypto-rust"] }
keyring = { version = "3", features = ["linux-native", "sync-secret-service", "vendored"]}

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"
