[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-keyring"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
napi = { version = "2", default-features = false, features = [
  "napi3",
  "error_anyhow",
] }
napi-derive = "2"

[target.'cfg(target_os = "windows")'.dependencies]
byteorder = "1"
keyring = "3"
windows = { version = "0.58", features = [
  "Win32",
  "Win32_Security_Credentials",
  "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation        = "0.10"
keyring                = { version = "3", features = ["apple-native"] }
security-framework     = "3.0"
security-framework-sys = "2.12"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = [
  "linux-native",
  "sync-secret-service",
  "vendored",
] }
secret-service = { version = "4", features = ["rt-async-io-crypto-rust"] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring        = { version = "3", features = ["async-secret-service", "crypto-rust"] }
secret-service = { version = "4", features = ["rt-async-io-crypto-rust"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"
